Fix continue button mobile placement

--- a/css/component.css
+++ b/css/component.css
@@ -806,7 +806,7 @@ input[type=text]::-ms-clear {
 	}
 
 	button.fs-continue {
-		right: 20px;
+		right: 120px;
 		bottom: 20px;
 		margin: 0;
 		padding: 50px 0 0 50px;
